s/protected/private in Filter Iterator

It should have been private afaict, but this matters because of gcc bug
87652
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=87652#